// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QRScreen > shows QR code when a username is set 1`] = `
<div>
  <div
    class="qr-screen"
  >
    <div
      class="qr-container"
    >
      <h2>
        @
        ekohilas
      </h2>
      <div
        class="qr-code-wrapper"
      >
        <img
          alt="LinkedIn QR Code"
          class="qr-code"
          src="data:image/png;base64,mockqrcode"
        />
        <p
          class="tap-hint"
        >
          👆 Tap to take a selfie
        </p>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`QRScreen > shows error when QR code generation fails 1`] = `
<div>
  <div
    class="qr-screen"
  >
    <div
      class="qr-container"
    >
      <h2>
        @
        ekohilas
      </h2>
      
      <p
        class="error"
      >
        Failed to generate QR code
      </p>
    </div>
  </div>
</div>
`;

exports[`QRScreen > shows instructions when no username is set 1`] = `
<div>
  <div
    class="qr-screen"
  >
    <div
      class="qr-instructions"
    >
      <h1>
        LinkedInSnap
      </h1>
      <p>
        Add your LinkedIn username to the URL:
      </p>
      <code>
        #{username}
      </code>
      <p
        class="example"
      >
        Example: #ekohilas
      </p>
    </div>
  </div>
</div>
`;
